--- a/.github/workflows/merge_recents.yml
+++ b/.github/workflows/merge_recents.yml
@@ -5,8 +5,8 @@ on:
   workflow_dispatch:
   
   # scheduled run every Friday at 20.00 (19.00 UTC)
-  schedule:
-    - cron: '00 19 * * 5'
+  # schedule:
+  #   - cron: '00 19 * * 5'
     
 jobs:
 
@@ -51,7 +51,7 @@ jobs:
         disease_name: ${{ vars.DISEASE_NAME }}
         
       run: |
-        python ./tools/code/merge_recent_data.py --repository "./repo" --source_list "ERVISS FluID"
+        python ./tools/code/merge_recent_data_ILI_ARI.py --repository "./repo" --source_list "ERVISS FluID"
 
     - name: Commit data repo changes
       uses: EndBug/add-and-commit@v7
