--- a/.github/workflows/forecasting_weeks.yml
+++ b/.github/workflows/forecasting_weeks.yml
@@ -3,8 +3,8 @@ name: UpdateForecastingWeeks
 on:
 
   workflow_dispatch:
-  schedule:
-    - cron: "00 13 * * 5"
+  # schedule:
+  #   - cron: "00 13 * * 5"
 
     
 jobs:
