--- a/.github/workflows/persist_changes.yml
+++ b/.github/workflows/persist_changes.yml
@@ -56,10 +56,14 @@ jobs:
       run: |
         python ./tools/code/persist_changes.py
 
+
     - name: Commit changes
-      uses: EndBug/add-and-commit@v7
+      uses: EndBug/add-and-commit@v9
       with: 
           cwd: './repo'
           message: "Update data storage"
           default_author: github_actions
+          # push: origin main --force --set-upstream
           push: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.envPAT }}
