--- a/.github/workflows/upload_baseline_and_ensemble.yml
+++ b/.github/workflows/upload_baseline_and_ensemble.yml
@@ -1,12 +1,12 @@
 name: BaselineEnsembleUpload
 
 on:
-  workflow_run:
-    workflows: [GenerateEnsemble]
+  # workflow_run:
+  #   workflows: [GenerateEnsemble]
     
       
-    types:
-      - completed
+  #   types:
+  #     - completed
   
   workflow_dispatch:
 
