--- a/.github/workflows/upload_baseline_and_ensemble.yml
+++ b/.github/workflows/upload_baseline_and_ensemble.yml
@@ -1,27 +1,27 @@
 name: BaselineEnsembleUpload
 
 on:
-  # workflow_run:
-  #   workflows: [GenerateEnsemble]
+  workflow_run:
+    workflows: [GenerateEnsemble]
     
       
-  #   types:
-  #     - completed
+    types:
+      - completed
   
   workflow_dispatch:
 
   
 jobs:
   scheduled-submit:
-    # if: ${{ github.event.workflow_run.conclusion == 'success' && github.repository_owner == 'european-modelling-hubs' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.repository_owner == 'european-modelling-hubs' }}
     runs-on: ubuntu-latest
     
     steps:
 
       # Introduce some delay to complete DB write 
-      # - name: Sleep for 90 seconds
-      #   run: sleep 90s
-      #   shell: bash
+      - name: Sleep for 90 seconds
+        run: sleep 90s
+        shell: bash
 
       # Checkout the python tools repo
       # used to authenticate and validate the PR
