--- a/.github/workflows/scoring.yml
+++ b/.github/workflows/scoring.yml
@@ -58,7 +58,7 @@ jobs:
       run: |
         install.packages("remotes")
         install.packages("arrow", repos = c("https://apache.r-universe.dev", "https://cran.r-project.org"))
-        remotes::install_github("Infectious-Disease-Modeling-Hubs/hubData")
+        remotes::install_github("hubverse-org/hubData")
         install.packages("dplyr")
         install.packages('jsonlite')
         install.packages("optparse")
