--- a/.github/workflows/scoring.yml
+++ b/.github/workflows/scoring.yml
@@ -62,7 +62,8 @@ jobs:
         install.packages("dplyr")
         install.packages('jsonlite')
         install.packages("optparse")
-        install.packages("scoringutils")
+        # install.packages("scoringutils")
+        remotes::install_github("epiforecasts/scoringutils@v1.2")
       shell: Rscript {0}
 
     # Setup Python
