--- a/.github/workflows/import_truth.yml
+++ b/.github/workflows/import_truth.yml
@@ -30,7 +30,7 @@ jobs:
           const response = await github.rest.actions.listWorkflowRuns({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            workflow_id: '/import_truth.yml', // Workflow file name
+            workflow_id: 'import_truth.yml', // Workflow file name
             per_page: 1, // Last run info
           });
           const lastRun = response.data.workflow_runs[0];
