--- a/.github/workflows/import_truth.yml
+++ b/.github/workflows/import_truth.yml
@@ -6,7 +6,7 @@ on:
   # scheduled run every Friday at 19.00 (18.00 UTC)
   schedule:
     - cron: '00 18 * * 5'
-    - cron: '00 18 * * 1'
+    # - cron: '00 18 * * 1'
 
     
 jobs:
